[package]
name = "portrustscanner"
version = "0.1.0"
edition = "2021"

[dependencies]
threadpool = "1.8.1"
thiserror = "2.0.11"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
trust-dns-resolver = "0.21"
